syntax = "proto3";
package com.kajal;
option java_multiple_files=true;

// Song class definition
message Song {
  int32 song_id = 1;
  int32 artist_id = 2;
  int32 year = 3;
  string album = 4;
  string song_name = 5;
}

// Artist class definition
message Artist {
  int32 artist_id = 1;
  string first_name = 2;
  string last_name = 3;
  string gender = 4;
  int32 song_id = 5;
}


service SongArtistService {
  // unary synchronous
  // client will send one request and author will respond with one response
  rpc getSinger(Artist) returns(Artist) {}

  // client - streaming - asynchronous
  // client will send stream of messages and server will respond with one response
  rpc getLatestSong(stream Song) returns(Song) {}

  // server - streaming - asynchronous
  // client will send one request and server will respond with stream of messages
  rpc getSongsBySinger(Artist) returns (stream Song) {}

  // bidirectional - streaming - asynchronous
  // Client will send stream of messages and server will respond back with stream of messages
  rpc getSongBySingerGender(stream Song) returns (stream Song) {}
}